Fix typos of the original transcription.
FossilOrigin-Name: 584c26b497b0adba678c89bd327fb614deb0ae155f9c9c1f421c74195c453652

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -13,4 +13,9 @@
 //
 // Last modified 201903241435
 
-
+- Transcription typo?: "pro to ne manca les ni heroes" -> "pro to ne
+  manca les li heroes"?  Confirm "ni" can be used alone in than sense.
+- Transcription typo?: "In su maleol un crac e il senti que il ne
+  posse escapar".
+- Transcription typo?: "il discernet li conturas del feminin statura e
+  poc e poc il posset vider passabilmen bon" -> "e poc a poc".
