--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -36,7 +36,7 @@ Occidental.
 Mi calid desir es que plu competent scritores mey reprender mi iniciative,
 que ili mey crear ovre digni del sublim idé del interlingue.
 
-Jan a. Kajš
+Jan A. Kajš
 
 NOTE: Li textu di ti-ci edition esset digitalisat de Bedŕich Plavec secun li
 textu original e convertet de Thomas Schmidt in li formate PDF.
@@ -103,7 +103,7 @@ il abandonat li domette.
 "`yo have alqual presentiment que alquo mal va incontrar te. Resta hem,
 almen hodíe.`"
 
-"`Eh, quo posse incontrar me? Yo es ya caut. Li forestess yo conosse bon
+"`Eh, quo posse incontrar me? Yo es ya caut. Li forestes yo conosse bon
 e hodie es just li max oportun tempe. It prepara se a un storm e li
 gardaforestes va esser celat. Esse si cuida. Adio matre, dormí bon.`" E
 Ondra surtit ex li domette con li fusil celat sub li mantel.
@@ -206,7 +206,7 @@ quo"` e `"por quo"` ne havet li fine. Li explication esset penibil,
 nam Ondra adver ha comprendet li questiones, ma responder in un foren lingue,
 in quel on nequande ha parlat, ne es facil. Ondra devet reflecter chascun
 parol, corecter se o li tchec paroles adaptar al lingue antiqui-slavic. Solmen
-ci il reconosset li diferentie inter li passiv e activ saventie del linge.
+ci il reconosset li diferentie inter li passiv e activ saventie del lingue.
 Ondra comprendet li lingue del Slavines, ma parlar lor lingue il posset solmen
 con pena. Il va besonar ancor un poc de exercicie.
 
@@ -266,7 +266,7 @@ con li tempore li agnes perdit li fecunditá e poc a poc diminue se talmen
 que ili va desaparir. Li sam aparentie on posse constatar anc pri li uros de
 quel resta solmen un micri quantité.
 
-Li letura e scritura es che li slavines inconosset, almen secun nor usa.
+Li letura e scritura es che li Slavines inconosset, almen secun nor usa.
 Solmen in li pictura ili es versat, quam atestat diversi dessines per carbon,
 sur li roccas e gravuras sur ossin e petrin utensiles e vases.
 
@@ -303,7 +303,7 @@ pro to ne manca les ni heroes.
 
 On posse presc dir que li Slavines vive exter li tempore. Ili ne es avigilat
 per aurora o per canta de gallinos, ni per fabrical sirenes. Li tempore indica
-les solmen li marea de Ponikva. Li hores e minutes ne have por il alcun
+les solmen li marea de Ponikva. Li hores e minutes ne have por ili alcun
 importantie, nam ili ne besona timer pri tard ariva in li buró o ovreria. Ili
 have tam mult tempore que it ha cessat esser lor sclavator. E si es ver li
 proverbie: `"li tempor es moné"`, tande ili es li max rich popul del
@@ -393,7 +393,7 @@ procurar carne por li nuptial festine.
 
 == Li grand chasse
 
-In li sequent die Ondraha esset avigilat per grand tumultu. Li mannes
+In li sequent die Ondra ha esset avigilat per grand tumultu. Li mannes
 preparat se al chasse. In un moment il ha levat se. Il ha lavat se in li frigid
 fluvie, prendet li fusil e stantat se in li range de chasseros. E vi un
 eveniment inaudit: Krasina stantat se apu Ondra e volet acompaniar le al
@@ -420,7 +420,7 @@ Tande venit li moment quande Ondra posset monstrar li efect del fusil quel
 til tande esset misapreciat del indigenes. Ondra ha apuntat li arme: Eclatat li
 foy e detonation, li bestie ha rugit e
 
-volet lansar se a Ondra. Menaciosmen gruniente li urso balansat a Ondra.Ma
+volet lansar se a Ondra. Menaciosmen gruniente li urso balansat a Ondra. Ma
 tande Ondra tirat denove, e li bestie cadet al terra. Li chasseros con hurrá
 battet li urso.
 
