--- a/src/krasina.adoc
+++ b/src/krasina.adoc
@@ -1,5 +1,8 @@
 = Krasina: Original raconta ex li subterrania de Moravian Carst
 :author: Jan A. Kajš
+:revnumber: 0.1.0-dev.0+20190324
+:version-label: Version de edition digital:
+:lang: ie
 
 // This file is part of project
 // _Krasina_
@@ -10,7 +13,7 @@
 // This file is in Asciidoctor format
 // (http//asciidoctor.org)
 //
-// Last modified 201903241619
+// Last modified 201903241623
 
 Printería de J. A. Kajš
 
